logs/nutstore-cli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/easywebdav'...
Listing './lib/python3.5/site-packages/easywebdav-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/nutstore_cli'...
Listing './lib/python3.5/site-packages/nutstore_cli/client'...
Listing './lib/python3.5/site-packages/nutstore_cli/utils'...
Listing './lib/python3.5/site-packages/nutstore_cli-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/parsimonious'...
Listing './lib/python3.5/site-packages/parsimonious/tests'...
Compiling './lib/python3.5/site-packages/parsimonious/tests/benchmarks.py'...
***   File "./lib/python3.5/site-packages/parsimonious/tests/benchmarks.py", line 91
    print 'Took %.3fs to parse %.1fKB: %.0fKB/s.' % (seconds_each,
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/parsimonious-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prompt_toolkit'...
Listing './lib/python3.5/site-packages/prompt_toolkit/clipboard'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/completers'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/regular_languages'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/telnet'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/validators'...
Listing './lib/python3.5/site-packages/prompt_toolkit/eventloop'...
Listing './lib/python3.5/site-packages/prompt_toolkit/filters'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding/bindings'...
Listing './lib/python3.5/site-packages/prompt_toolkit/layout'...
Listing './lib/python3.5/site-packages/prompt_toolkit/styles'...
Listing './lib/python3.5/site-packages/prompt_toolkit/terminal'...
Listing './lib/python3.5/site-packages/prompt_toolkit-1.0.9.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.7.7.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
